Adicionado revisão e correções diversas pós revisão do orientador

--- a/main.tex
+++ b/main.tex
@@ -109,7 +109,7 @@
 	\maketitle
 
 	\section*{RESUMO}
-	O desenvolvimento de aplicativos móveis trouxe uma série de desafios para a ciência da computação. Com limitações de recursos como a bateria, armazenamento e memória, o desenvolvimento de software para dispositivos móveis impõe requisitos não-funcionais importantes a serem considerados no projeto de aplicativos. Com a popularização da internet e a expansão das redes móveis, os aplicativos tornaram-se popular e projetá-los de forma fácil com componentes de alto nível, baixo acoplamento e bom desempenho não é uma tarefa trivial. Este trabalho apresenta uma arquitetura de referência para o desenvolvimento de aplicativos móveis orientado a plugins no contexto de sistemas de informação, proporcionando baixo acoplamento entre os componentes e escalabilidade de recursos através de plugins, além de componentes reusáveis de alto nível para recursos básicos como acesso a rede, persistência de dados, notificações do aplicativo e comunicação entre objetos através de eventos.
+	O desenvolvimento de aplicativos móveis trouxe uma série de desafios para a ciência da computação. Com limitações de recursos como a bateria, armazenamento e memória, o desenvolvimento de software para dispositivos móveis impõe requisitos não-funcionais importantes a serem considerados no projeto de aplicativos. Com a popularização da Internet e a expansão das redes móveis, os aplicativos tornaram-se populares e projetá-los de forma fácil com componentes de alto nível, baixo acoplamento e bom desempenho não é uma tarefa trivial. Este trabalho apresenta uma arquitetura de referência para o desenvolvimento de aplicativos móveis orientado a plugins no contexto de sistemas de informação, proporcionando baixo acoplamento entre os componentes e escalabilidade de recursos através de plugins. A arquitetura dispõe de componentes de alto nível reusáveis para acesso a rede, persistência de dados, notificações do aplicativo e comunicação entre objetos através de eventos. A avaliação realizada neste trabalho, foi baseada em métricas extraídas a partir do código de duas versões de um aplicativo, sendo uma versão baseada nesta arquitetura.
 
 	\keywords{Aplicativos Móveis; Arquitetura de Software; Qt; Sistemas de Informação.}
 
