--- a/references.bib
+++ b/references.bib
@@ -269,3 +269,12 @@
 	title 		= {Emile Mobile | GSORT},
 	note 		= "Acessado em 10/03/2018. Disponível em: http:/http://emile.ifba.edu.br/"
 }
+
+@book{Taylor:2009:SAF:1538494,
+	title 		= {Software Architecture: Foundations, Theory, and Practice},
+	author 		= {Taylor, R. N. and Medvidovic, N. and Dashofy, E. M.},
+	year 		= {2009},
+	isbn 		= {0470167742, 9780470167748},
+	publisher 	= {Wiley Publishing},
+	url			= {https://dl.acm.org/citation.cfm?id=1538494}
+}
