--- a/sections/1-introducao.tex
+++ b/sections/1-introducao.tex
@@ -36,4 +36,4 @@ Para avaliar a arquitetura proposta neste trabalho, foi desenvolvido duas versõ
 %--------------------------%
 %* Retórica *%
 %--------------------------%
-Este trabalho está organizado como segue. A seção 2 apresenta o referencial bibliográfico. Em seguida, na seção 3, será apresentado os trabalhos relacionados. A seção 4 detalha o projeto da arquitetura. A seção 5 apresenta a avaliação realizada e a seção 6 descreve as conclusões obtidas seguido das limitações encontradas e os possíveis trabalhos futuros.
+Este trabalho está organizado como segue. A Seção 2 apresenta arquiteturas e tecnologias para sistemas mobile. Em seguida, na Seção 3, serão apresentados os trabalhos relacionados. A Seção 4 detalha o projeto da arquitetura. A Seção 5 apresenta a avaliação realizada e a Seção 6 descreve as conclusões obtidas seguido das limitações encontradas e os possíveis trabalhos futuros.
