--- a/sections/2-referencial-bibliografico.tex
+++ b/sections/2-referencial-bibliografico.tex
@@ -1,8 +1,8 @@
 %<Fazer um merge das duas últimas sessẽos para uma única simplificadamente.>%
 %<apresentar uma pequena descrição dos assuntos apresentados nas sub-seções seguintes>%
 %<Um último parágrafo ligando estes quatro temas, sem ainda dizer o que você vai fazer>%
-\section{REFERENCIAL BIBLIOGRÁFICO}
-Esta seção, apresenta as principais referências que contextualizam este trabalho. A subseção 2.1 apresenta o Qt e o QML. A subseção 2.2 descreve sobre Arquitetura de Software. A subseção 2.3 apresenta Arquitetura de Referência. A subseção 2.4 resume Sistemas de Informação. A subseção 2.5 apresenta Arquiteturas de Aplicativos Móveis. A subseção 2.6 detalha Projetos de Aplicativos Móveis. A subseção 2.7 discute sobre Desenvolvimento Orientado a Componentes. Para finalizar, a subseção 2.8 faz uma breve revisão sobre as tecnologias suportadas nesta arquitetura: \textit{web services}, o estilo arquitetural \textit{RESTful}, o \textit{Push Notification} e o JSON.
+\section{ARQUITETURAS E TECNOLOGIAS PARA SISTEMAS MOBILE}
+Esta Seção, apresenta as principais referências que contextualizam este trabalho. A Subseção 2.1 apresenta o Qt e o QML. A Subseção 2.2 descreve sobre Arquitetura de Software. A Subseção 2.3 apresenta Arquitetura de Referência. A Subseção 2.4 resume Sistemas de Informação. A Subseção 2.5 apresenta Arquiteturas de Aplicativos Móveis. A Subseção 2.6 detalha Projetos de Aplicativos Móveis. A Subseção 2.7 discute sobre Desenvolvimento Orientado a Componentes. Para finalizar, a Subseção 2.8 faz uma breve revisão sobre as tecnologias suportadas nesta arquitetura: \textit{web services}, o estilo arquitetural \textit{RESTful}, o \textit{Push Notification} e o JSON.
 
 
 \subsection{O Qt e o QML} %2.1
@@ -65,7 +65,7 @@ A concepção de uma arquitetura de referência pode ser entendida neste trabalh
 
 \subsection{Sistemas de Informação} %2.4
 Um sistema de informação pode ser definido como um conjunto de componentes inter-relacionados trabalhando juntos para coletar, recuperar, processar, armazenar e distribuir informações com a finalidade de facilitar o planejamento, o controle, a coordenação, a análise e o processo decisório em organizações \cite{laudon}.\par
-O escopo desta arquitetura está focado em sistemas de informação, porém, não está limitado somente a este tipo de software. Os requisitos de um aplicativo baseado nesta arquitetura, devem ser implementados através de plugins que podem se comunicar, persistir dados e conectar à internet de forma facilitada, usando APIs de alto nível. No entanto, os requisitos funcionais atendidos por esta arquitetura são muito comuns em sistemas de informação e este projeto tem o objetivo de facilitar a construção de aplicativos para este segmento.
+O escopo desta arquitetura está focado em sistemas de informação, porém, não está limitado somente a este tipo de software. Os requisitos de um aplicativo baseado nesta arquitetura, devem ser implementados através de plugins que podem se comunicar, persistir dados e conectar à Internet de forma facilitada, usando APIs de alto nível. No entanto, os requisitos funcionais atendidos por esta arquitetura são muito comuns em sistemas de informação e este projeto tem o objetivo de facilitar a construção de aplicativos para este segmento.
 
 
 \subsection{Arquiteturas de Aplicativos Móveis} %2.5
@@ -110,7 +110,7 @@ O reuso de componentes é um recurso desta arquitetura, pois dispõe de onze com
 %<colocar uma figura explicando uma requisicao RESTful convencional>%
 %<benefícios do RESTful: porque tem sido amplamente adotado?>%
 \subsection{Web Services, RESTful, Push Notification e JSON} %2.8
-\textit{Web Services} constituem uma tecnologia emergente da Arquitetura Orientada a Serviços (SOA) \cite{perepletchikov}. Com a expansão da internet e a necessidade de integração entre aplicações web, tornou-se necessário a centralização de informações para serem acessados por diferentes clientes. Para esse propósito, foi criada a tecnologia de \textit{web services} \cite{ibm_research}. 
+\textit{Web Services} constituem uma tecnologia emergente da Arquitetura Orientada a Serviços (SOA) \cite{perepletchikov}. Com a expansão da Internet e a necessidade de integração entre aplicações web, tornou-se necessário a centralização de informações para serem acessados por diferentes clientes. Para esse propósito, foi criada a tecnologia de \textit{web services} \cite{ibm_research}. 
 
 \textit{RESTful} é um estilo arquitetural para a construção de sistemas distribuídos \cite{fielding}. O elemento fundamental da arquitetura \textit{RESTful} é o \textit{resource} ou recurso. Um recurso pode ser uma página web contendo um documento estruturado, uma imagem ou até mesmo um vídeo. Para localizar os recursos envolvidos em uma interação entre os componentes da arquitetura \textit{RESTful} é utilizado o chamado identificador de recurso ou \textit{URI}. Com isso, um recurso pode ser representado através de diferentes formatos e o mais comum e utilizado é o \textit{JSON}.
 
